[gd_scene load_steps=6 format=3 uid="uid://dvm87cwckmutu"]

[ext_resource type="PackedScene" uid="uid://diyntio4siccb" path="res://UI/button.tscn" id="1_28flt"]
[ext_resource type="Script" uid="uid://bn60pud7w7c6i" path="res://Scenes/UI Scenes/main_menu.gd" id="1_48xlc"]
[ext_resource type="AudioStream" uid="uid://c07tohvcegbp" path="res://Assets/SFX/button_hover.mp3" id="3_pih3d"]
[ext_resource type="AudioStream" uid="uid://7k2cehkogn7v" path="res://Assets/SFX/button_press.mp3" id="4_pih3d"]
[ext_resource type="Texture2D" uid="uid://lb5w65s8sw6v" path="res://Assets/Backgrounds/MENU.png" id="5_j51p1"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_48xlc")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_j51p1")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -56.0
offset_right = 128.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewButton" parent="VBoxContainer" instance=ExtResource("1_28flt")]
layout_mode = 2
text = "New Game"

[node name="LoadButton" parent="VBoxContainer" instance=ExtResource("1_28flt")]
unique_name_in_owner = true
layout_mode = 2
text = "Load"

[node name="OptionsButton" parent="VBoxContainer" instance=ExtResource("1_28flt")]
layout_mode = 2
text = "Options"

[node name="CreditsButton" parent="VBoxContainer" instance=ExtResource("1_28flt")]
layout_mode = 2
text = "Credits"

[node name="ExitButton" parent="VBoxContainer" instance=ExtResource("1_28flt")]
layout_mode = 2
text = "Exit"

[node name="SwitchSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_pih3d")

[node name="PressSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_pih3d")

[connection signal="focus_entered" from="VBoxContainer/NewButton" to="." method="_on_button_focus_entered"]
[connection signal="pressed" from="VBoxContainer/NewButton" to="." method="_on_new_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/LoadButton" to="." method="_on_button_focus_entered"]
[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/OptionsButton" to="." method="_on_button_focus_entered"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/CreditsButton" to="." method="_on_button_focus_entered"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/ExitButton" to="." method="_on_button_focus_entered"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
